# beryl

./: .gitignore  Cargo.toml  LICENSE  init_project.py  lencyc_compiler  lencyc_test  rename_project.sh  vec_test
.cargo/: config.toml
.github/workflows/: audit.yml  bootstrap.yml  ci.yml  editor.yml  lints.yml  pr-title.yml  release.yml  tests.yml
assets/: Beryl.txt  CONTEXT.md  Lency.txt  design_spec.md  feature_list.md  implementation_roadmap.md  sprint_12_progress.md  sprint_13_bootstrapping.md  sprint_7_generics.md  task.md
crates/beryl_cli/: Cargo.toml
crates/beryl_codegen/: Cargo.toml
crates/beryl_diagnostics/: Cargo.toml
crates/beryl_driver/: Cargo.toml
crates/beryl_driver/examples/: simple.rs  test_operators.rs  test_parser.rs
crates/beryl_driver/src/: error.rs  lib.rs
crates/beryl_monomorph/: Cargo.toml
crates/beryl_runtime/: Cargo.toml
crates/beryl_sema/: Cargo.toml
crates/beryl_syntax/: Cargo.toml
crates/lency_cli/: Cargo.toml
crates/lency_codegen/: Cargo.toml
crates/lency_diagnostics/: Cargo.toml
crates/lency_driver/: Cargo.toml
crates/lency_monomorph/: Cargo.toml
crates/lency_runtime/: Cargo.toml
crates/lency_sema/: Cargo.toml
crates/lency_syntax/: Cargo.toml
docs/: README.md  TODO_CLEANUP.md
docs/basics/: functions.md
docs/tools/: scripts.md
docs/types/: bool.md  enums.md  float.md  structs.md
editors/: README.md
editors/docs/: FUTURE_PLAN.md
examples/: hello_world.brl  test_array_bounds.brl  test_array_bounds_compile_time.brl  test_array_length.brl  test_arrays.brl  test_compile_bounds_simple.brl  test_for_in.brl  test_negative_index.brl  test_valid_bounds.brl
prompt/: context.md  rules.md
scripts/: check_banned_patterns.py  check_dir_density.py  check_file_size.py  check_lencyc_meta.py  check_lencyc_meta_tests.py  check_todos.py  dev_ide.sh  lency_selfhost_build.sh  lency_selfhost_run.sh  run_checks.sh  run_lcy_tests.sh  run_lency_checks.sh
tests/: README.md
(+441 files in other folders)
